# compass-android

./: build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/me/darthwithap/android/compass/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/me/darthwithap/android/compass/: CompassApplication.kt  MainActivity.kt
app/src/main/java/me/darthwithap/android/compass/data/: SensorDataSourceImpl.kt
app/src/main/java/me/darthwithap/android/compass/data/gps/: GpsDataSource.kt  GpsDataSourceImpl.kt
app/src/main/java/me/darthwithap/android/compass/data/models/: CompassReadingDto.kt
app/src/main/java/me/darthwithap/android/compass/data/repository/: CompassReadingsRepository.kt  CompassRepositoryImpl.kt  SensorRepositoryImpl.kt
app/src/main/java/me/darthwithap/android/compass/data/sensor/: CompassReadingDto.kt  SensorDataSource.kt  SensorDataSourceImpl.kt
app/src/main/java/me/darthwithap/android/compass/di/: AppModule.kt  DomainModule.kt
app/src/main/java/me/darthwithap/android/compass/domain/models/: CalibrationState.kt  CompassReading.kt  NorthType.kt  ReadingDirection.kt
app/src/main/java/me/darthwithap/android/compass/presentation/: CompassReadingScreen.kt  Routes.kt
app/src/main/java/me/darthwithap/android/compass/util/: AppError.kt  AppResult.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/me/darthwithap/android/compass/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+17 files in other folders)
